--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -259,7 +259,7 @@
 ;cookie_samesite = lax
 
 # set to true if you want to allow browsers to render Grafana in a <frame>, <iframe>, <embed> or <object>. default is false.
-;allow_embedding = false
+allow_embedding = true
 
 # Set to true if you want to enable http strict transport security (HSTS) response header.
 # HSTS tells browsers that the site should only be accessed using HTTPS.
@@ -409,8 +409,7 @@
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-;enabled = false
-
+enabled = true
 # specify organization name that should be used for unauthenticated users
 ;org_name = Main Org.
 
